--- a/package.json
+++ b/package.json
@@ -33,7 +33,11 @@
   },
   "homepage": "https://github.com/haraka/haraka-plugin-esets#readme",
   "devDependencies": {
-    "@haraka/eslint-config": "2.0.2",
+    "@haraka/eslint-config": "^2.0.2",
     "haraka-test-fixtures": "1.3.5"
+  },
+  "prettier": {
+    "singleQuote": true,
+    "semi": false
   }
 }
