--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "haraka-plugin-esets",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Haraka plugin that scans with ESETS",
   "main": "index.js",
   "files": [
@@ -9,8 +9,8 @@
   ],
   "scripts": {
     "format": "npm run prettier:fix && npm run lint:fix",
-    "lint": "npx eslint@^8 *.js test",
-    "lint:fix": "npx eslint@^8 *.js test --fix",
+    "lint": "npx eslint@^9 *.js test",
+    "lint:fix": "npx eslint@^9 *.js test --fix",
     "prettier": "npx prettier . --check",
     "prettier:fix": "npx prettier . --write --log-level=warn",
     "test": "node --test",
@@ -26,14 +26,18 @@
     "plugin",
     "esets"
   ],
-  "author": "Welcome Member <happy-haraka-hacker@example.com>",
+  "author": "Haraka Team <haraka.team@gmail.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/haraka/haraka-plugin-esets/issues"
   },
   "homepage": "https://github.com/haraka/haraka-plugin-esets#readme",
   "devDependencies": {
-    "@haraka/eslint-config": "1.1.3",
-    "haraka-test-fixtures": "1.3.5"
+    "@haraka/eslint-config": "^2.0.2",
+    "haraka-test-fixtures": "1.3.8"
+  },
+  "prettier": {
+    "singleQuote": true,
+    "semi": false
   }
 }
